# plato

./: .env.local  .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  abby_roads.json  arm.Dockerfile  docker-compose-arm.yaml  docker-compose.yml  main.py  micro-templating-keycloak-realm.json  prestart.sh  pyproject.toml  settings.py
conf/: mypy.ini.sample
docker/: docker-compose.local.override.yml  docker-compose.override.yml  postgres.Dockerfile
micro_templating/: __init__.py  api.py  auth.py  cli.py  error_messages.py  flask_app.py  main.py  renderer.py  settings.py  setup_util.py
micro_templating/compose/: __init__.py  jinja_filters.py  jinja_formatters.py  renderer.py  types.py
micro_templating/db/: database.py  models.py
micro_templating/db/model/: models.py  template.py
micro_templating/static/: swagger-ui-standalone-preset.js
micro_templating/templates/flasgger/: swagger.html
micro_templating/views/: __init__.py  template.py  views.py
migrations/versions/: 5dea988a0349_remove_partner_id_column.py  7f85321361bf_add_example_column.py  9f9acc343160_make_example_column_nonnullable.py  b08bee53dee3_create_primary_key.py  b1bc752b6189_tagcolumn.py  de2de58b18bc_add_example_column.py  f841a0bf1c4c_initial_db.py
plato/: __init__.py  api.py  cli.py  domain.py  error_messages.py  file_storage.py  flask_app.py  s3_bucket_util.py  settings.py  setup_util.py
plato/compose/: __init__.py  jinja_filters.py  renderer.py
plato/db/: models.py
plato/static/: swagger-ui.css
plato/util/: file_storage_util.py  file_util.py  path_util.py  s3_bucket_util.py  setup_util.py
plato/views/: views.py
slate/: Jenkinsfile  README.md  docker-compose.yml
slate/source/: index.html.md
slate/source/includes/: introduction.md  quick_start.md  template.md  template_creation.md  template_management.md
slate/source/layouts/: layout.erb
slate/source/stylesheets/: _variables.scss  screen.css.scss
stubs/flasgger/: __init__.pyi  base.pyi
stubs/flask_migrate/: __init__.pyi
stubs/jose/: jwt.pyi
stubs/num2words/: __init__.pyi
stubs/qrcode/: __init__.pyi  main.pyi
stubs/qrcode/image/: pil.pyi
tests/: __init__.py  auth.py  conftest.py  docker-compose.test.yml  test_application_set_up.py  test_auth.py  test_compose.py  test_get_templates.py  test_management_templates.py  test_micro_templating.py  test_s3_application_set_up.py  test_templates.py
tests/docker/: docker-compose.build.test.yml  docker-compose.local.test.yml  docker-compose.test.yml
