[tool.poetry]
name = "plato-api"
version = "2022.10.1-dev"
description = "Templating as a microservice"
authors = ["Tiago Santos <tiago.santos@vizidox.com>", "Joana Teixeira <joana.teixeira@vizidox.com>",
    "Hieu Le <hieu.le@morphotech.co.uk>", "Rita Mariquitos <rita.mariquitos@morphotech.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7.2"

flasgger = "0.9.5"
Flask="2.2.2"
Flask-Cors="3.0.10"
gunicorn="20.0.4"
meinheld="1.0.2"

# auth
python-jose="3.1.0"

# S3
smart-open={version="2.0.0", extras=["aws"]}

# settings
python-dotenv="0.13.0"
tomlkit="0.11.5"

# Database
psycopg2-binary="2.9.3"
SQLAlchemy="1.4.31"
Flask-SQLAlchemy="~2.5"
Flask-Migrate="~3.1"

#HTTP
accept-types="0.4.1"

# Templating
WeasyPrint="51"
qrcode={ version = "6.1", extras=["pil"] }
babel="2.8.0"
num2words="0.5.10"

[tool.poetry.dev-dependencies]
pytest="~5.4"
pytest-cov="2.10.1"
moto="1.3.14"
testcontainers = "3.0.3"
blinker="1.4"
PyMuPDF="1.20.2"

# Static Typing
mypy="0.982"
mypy-extensions="0.4.3"
typing-extensions="4.1.1"
sqlalchemy-stubs="0.4"
#types-requests="2.28.11.2"
types-Flask="1.1.6"
types-Flask-Cors="3.0.2"
types-jmespath="1.0.2"
types-babel="2.10.0"
types-jsonschema="4.16.1.1"

pylint="2.15.4"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
